# FoP-Project

./: CMakeLists.txt  control_flow_logic.cpp  control_flow_logic.h  events.cpp  events.h  interpreter.cpp  interpreter.h  looks_commands.cpp  looks_commands.h  main.cpp  motion_commands.cpp  motion_commands.h  operators.cpp  operators.h  sensing_commands.cpp  sensing_commands.h  sound_commands.cpp  sound_commands.h  sprite.cpp  sprite.h  sprite_editor.cpp  variables.cpp  variables.h
Graphics/: main_menu_scratch_graphic.cpp
costume_editor/: costume_editor.cpp  sprite_editor.cpp  sprite_editor.h
